Develop a migration tool to convert XML schemas #11381